vote/vote-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vote
  labels:
    project: vote
