vote/db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db
  namespace: vote
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: db
        role: vote
    spec:
      containers:
      - image: postgres:9.4
        name: db
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-data

      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-pvc
