vote/redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: redis
    spec:
      containers:
      - image: schoolofdevops/redis:latest
        imagePullPolicy: Always
        name: redis
        ports:
        - containerPort: 6379
          protocol: TCP
#        volumeMounts:
#        - name: redis-config
#          subPath: redis.conf
#          mountPath: /etc/redis.conf
#      volumes:
#      - name: redis-config
#        configMap:
#          name: redis
#      restartPolicy: Always
