vote/vote-d3.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vote3
  namespace: vote
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: dockersamples/examplevotingapp_vote:before
        name: vote
        resources:
          limits:
            cpu: "100m"
            memory: "250Mi"
          requests:
            cpu: "80m"
            memory: "50Mi"
