vote/vote-service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote1
  namespace: vote
spec:
  type: NodePort
  ports:
  - name: "vote-service"
    port: 5000
    targetPort: 80
    nodePort: 30001
  selector:
    role: vote
