vote/vote-ing.yaml
apiVersion: extensions/v1beta
kind: Ingress
metadata:
  name: vote
  annotations:
