vote/vote-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: public
spec:
  podSelector:
    matchExpressions:
      - {key: role, operator: In, values: [vote]}
#      - {key: app, operator: In, values: [result]}
  policyTypes:
  - Ingress
  ingress:
    - {}
